--- a/txData/VORPCore_D7B3BF.base/server.cfg
+++ b/txData/VORPCore_D7B3BF.base/server.cfg
@@ -15,7 +15,7 @@ sv_licenseKey "thy9jj06quo7ycfocsd1gggionw36j3u"
 sv_maxclients 48
 sv_enforceGameBuild 1491 #September 2022 update
 set gamename rdr3
-set steam_webApiKey "5B6023166D68FFDA31A5111E2577AF96"
+set steam_webApiKey "5B6023166D68FFDA31A5111E2577AF96"#
 set mysql_connection_string "mysql://root@localhost/vorpv2?charset=utf8mb4"
 set mysql_slow_query_warning 200    # to only show warnings above 700
 load_server_icon icon.png  #REPLACE the icon.png found in the folder to your logo 96x96
